--- a/package.json
+++ b/package.json
@@ -25,17 +25,23 @@
     "@nestjs/common": "^8.2.6",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.6",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
-    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
+    "@nestjs/typeorm": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/luxon": "^3.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "mongoose": "^6.2.1",
+    "luxon": "^3.0.1",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.0",
